--- a/src/assets/styles/utils/variables.scss
+++ b/src/assets/styles/utils/variables.scss
@@ -1,11 +1,13 @@
 $color-accent: #B40006;
 
-$color-text-primary: #C7CCD1;
+$color-text-primary: #fff;
 $color-text-secondary: rgba(#fff, 0.6);
 
 $color-bg: #1F1F21;
 $color-bg-seconadry: #2D2D2F;
 
+$font-tiny: 10px;
+$font-small: 13px;
 $font-regular: 16px;
 
 $grid-columns: 12 !default;
