--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -5,6 +5,10 @@
   align-items: center;
   justify-content: space-between;
   padding: 12px 0;
+  height: 100px;
+  box-sizing: border-box;
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  position: relative;
+  z-index: 1;
   @include container;
 }
