--- a/src/index.scss
+++ b/src/index.scss
@@ -2,15 +2,24 @@
 @import "./assets/styles/base/fonts.scss";
 
 body {
-    padding: 0;
-    margin: 0;
-    font-size: 16px;
-    font-family: proxima-nova, sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    background-color: $color-bg;
+  padding: 0;
+  margin: 0;
+  font-size: 16px;
+  font-family: proxima-nova, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  background-color: $color-bg;
 }
 
+h1 {
+  font-size: $font-xlarge;
+  margin: 0;
+}
+
+p {
+  font-size: $font-regular;
+  margin: 0;
+}
 // Proxima Nova Bold
 
 // font-family: proxima-nova, sans-serif;
