FeaturedItem styling improvements

--- a/src/assets/styles/base/reset.scss
+++ b/src/assets/styles/base/reset.scss
@@ -124,8 +124,9 @@ table {
   border-spacing: 0;
 }
 button {
-  outline: none;
-  border: none;
+  outline: 0;
+  border: 0;
   box-shadow: none;
   background: transparent;
+  cursor: pointer;
 }
