--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,4 @@
+@import "./assets/styles/base/reset.scss";
 @import "./assets/styles/utils/variables.scss";
 @import "./assets/styles/base/fonts.scss";
 
