--- a/src/components/Featured/Featured.scss
+++ b/src/components/Featured/Featured.scss
@@ -25,6 +25,7 @@
     position: relative;
     color: $color-text-primary;
     font-size: $font-regular;
+    font-weight: 500;
     text-transform: uppercase;
 
     &:before {
