--- a/src/assets/styles/base/reset.scss
+++ b/src/assets/styles/base/reset.scss
@@ -84,6 +84,7 @@ video {
   border: 0;
   font-size: 100%;
   font: inherit;
+  color: inherit;
   vertical-align: baseline;
   text-decoration: none;
 }
