--- a/src/components/Thumbnail/Thumbnail.scss
+++ b/src/components/Thumbnail/Thumbnail.scss
@@ -1,29 +1,34 @@
 @import "../../assets/styles/utils/variables";
 @import "../../assets/styles/utils/mixins";
 
-.featured-item {
+.thumbnail {
   display: flex;
   flex-direction: column;
-  min-width: 26%;
-  width: 26%;
+  min-width: 28%;
+  width: 28%;
   height: 320px;
   border-radius: 8px;
-  margin-right: 16px;
   background-color: $color-bg-secondary;
   position: relative;
   overflow: hidden;
   transition: all 0.3s cubic-bezier(0.73, 0.02, 0.35, 1);
+  margin: 16px 16px 0 0;
+  cursor: pointer;
   $self: &;
 
   &:hover {
-    min-width: 600px;
-    width: 600px;
-    height: 360px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
-
     #{$self}__action,
     #{$self}__price {
       opacity: 1;
+    }
+  }
+
+  &--hover {
+    &:hover {
+      min-width: 600px;
+      width: 600px;
+      height: 360px;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
     }
   }
 
