--- a/src/index.scss
+++ b/src/index.scss
@@ -15,7 +15,14 @@ body {
 
 h1 {
   font-size: $font-xlarge;
+  font-weight: 700;
   margin: 0;
+}
+
+h2 {
+  font-size: $font-xlarge;
+  font-weight: 700;
+  line-height: 1.1;
 }
 
 h5 {
@@ -35,6 +42,7 @@ p {
   font-size: $font-regular;
   margin: 0;
   line-height: 1.5;
+  color: $color-text-secondary;
 }
 // Proxima Nova Bold
 
