--- a/src/components/Actions/Actions.scss
+++ b/src/components/Actions/Actions.scss
@@ -1,38 +1,38 @@
 @import "../../assets/styles/utils/variables";
-@import "../../assets/styles/utils/mixins"; 
+@import "../../assets/styles/utils/mixins";
 
 .actions {
+  display: flex;
+  align-items: center;
+
+  &__item {
+    position: relative;
+    color: $color-text-primary;
+    background: transparent;
+    outline: 0;
+    border: 0;
+    padding: 12px;
+    font-size: $font-regular;
+    cursor: pointer;
+    transition: color 0.12s ease-in-out;
+
+    &:hover {
+      color: rgba($color-text-primary, 0.7);
+    }
+  }
+
+  &__counter {
     display: flex;
     align-items: center;
-
-    &__item {
-        position: relative;
-        color: $color-text-primary;
-        background: transparent;
-        outline: 0;
-        border: 0;
-        padding: 12px;
-        font-size: $font-regular;
-        cursor: pointer;
-        transition: opacity 0.12s ease-in-out;
-
-        &:hover {
-            opacity: 0.7;
-        }
-    }
-
-    &__counter {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        position: absolute;
-        top: 0;
-        right: 0;
-        height: 20px;
-        width: 20px;
-        border-radius: 50%;
-        background-color: $color-accent;
-        color: $color-text-primary;
-        font-size: $font-tiny;
-    }
+    justify-content: center;
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    background-color: $color-accent;
+    color: $color-text-primary;
+    font-size: $font-tiny;
+  }
 }
