--- a/src/assets/styles/utils/mixins.scss
+++ b/src/assets/styles/utils/mixins.scss
@@ -2,7 +2,12 @@
 
 @mixin container {
   max-width: 1280px;
+  padding: 0 30px;
   margin: 0 auto;
+
+  @include breakpoint-down(sm) {
+    padding: 0 16px;
+  }
 }
 
 // Responsiveness
