--- a/src/assets/styles/utils/variables.scss
+++ b/src/assets/styles/utils/variables.scss
@@ -6,11 +6,12 @@ $color-text-secondary: rgba(#fff, 0.6);
 $color-bg: #1f1f21;
 $color-bg-secondary: #2d2d2f;
 
-$font-tiny: 10px;
-$font-small: 13px;
-$font-regular: 16px;
-$font-large: 24px;
-$font-xlarge: 40px;
+$font-tiny: 0.625rem;
+$font-small: 0.8125rem;
+$font-regular: 1rem;
+$font-large: 1.5rem;
+$font-xlarge: 2.5rem;
+$font-xxlarge: 4rem;
 
 $grid-columns: 12 !default;
 $grid-rows: 6 !default;
