--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -1,26 +1,116 @@
 @import "../../assets/styles/utils/variables.scss";
+@import "../../assets/styles/utils/mixins.scss";
 
 .nav {
+  $nav: &;
+  position: relative;
+
+  @include breakpoint-down(md) {
+    margin: 8px 16px 8px auto;
+  }
+
+  &__list {
     display: flex;
     align-items: center;
 
-    &__item {
-        position: relative;
-        list-style: none;
-        padding: 12px 16px;
-        transition: opacity 0.12s ease-in-out;
-
-        &:hover {
-            opacity: 0.7;
-        }
-
-        &--active {
-            border-bottom: 3px solid $color-accent;
-        }
+    @include breakpoint-down(md) {
+      display: none;
+      flex-direction: column;
+      width: 240px;
+      position: absolute;
+      top: 24px;
+      left: 50%;
+      transform: translateX(-50%);
+      border-radius: 10px;
+      background-color: $color-bg-secondary;
+      box-shadow: 0 12px 56px rgba(0, 0, 0, 0.4);
+      padding: 8px 24px;
     }
 
-    &__link {
-        color: $color-text-primary;
-        text-decoration: none;
+    &--active {
+      display: flex;
     }
+  }
+
+  &__item {
+    position: relative;
+    list-style: none;
+    padding: 12px 16px;
+    transition: opacity 0.12s ease-in-out;
+
+    @include breakpoint-down(md) {
+      padding: 16px;
+    }
+
+    &:hover {
+      opacity: 0.7;
+    }
+
+    &--active {
+      border-bottom: 3px solid $color-accent;
+    }
+  }
+
+  &__link {
+    color: $color-text-primary;
+    text-decoration: none;
+  }
+
+  &__lines {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    border: 0;
+    outline: 0;
+    background: transparent;
+    height: 16px;
+    width: 24px;
+    box-sizing: border-box;
+    cursor: pointer;
+    $lines: &;
+
+    @include breakpoint-up(md) {
+      display: none;
+    }
+
+    &--active {
+      #{$nav}__line:first-of-type {
+        transform: rotate(-45deg) translateY(-50%);
+        top: 50%;
+      }
+
+      #{$nav}__line:nth-child(2) {
+        width: 0;
+        opacity: 0;
+      }
+
+      #{$nav}__line:last-of-type {
+        top: 50%;
+        transform: rotate(45deg) translateY(-50%);
+      }
+    }
+  }
+
+  &__line {
+    position: absolute;
+    width: 24px;
+    height: 2px;
+    border-radius: 2px;
+    background: #fff;
+    transition: all 0.12s ease-in-out;
+    transform-origin: 50%;
+
+    &:nth-child(1) {
+      top: 0;
+    }
+
+    &:nth-child(2) {
+      top: 50%;
+      transform: translateY(-50%);
+    }
+
+    &:nth-child(3) {
+      top: 100%;
+    }
+  }
 }
