--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -10,5 +10,12 @@
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
   position: relative;
   z-index: 1;
+
   @include container;
+  @include breakpoint-up(xl) {
+    padding: 0;
+  }
+  @include breakpoint-down(md) {
+    justify-content: flex-start;
+  }
 }
