--- a/src/components/SearchPagination/SearchPagination.scss
+++ b/src/components/SearchPagination/SearchPagination.scss
@@ -7,6 +7,10 @@
   justify-content: space-between;
   margin: 40px 0;
 
+  @include breakpoint-down(md) {
+    flex-direction: column;
+  }
+
   &__total {
     display: flex;
     align-items: center;
@@ -21,6 +25,11 @@
     transition: opacity 0.12s ease-in-out;
     font-size: $font-regular;
 
+    @include breakpoint-down(md) {
+      height: 40px;
+      margin: 0 4px 16px 4px;
+    }
+
     span {
       margin-left: 8px;
       font-weight: 600;
@@ -32,6 +41,11 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
+    flex-wrap: wrap;
+
+    @include breakpoint-down(md) {
+      justify-content: center;
+    }
   }
 
   &__btn {
@@ -47,6 +61,12 @@
     margin: 0 4px;
     transition: opacity 0.12s ease-in-out;
     font-size: $font-regular;
+
+    @include breakpoint-down(md) {
+      height: 40px;
+      width: 40px;
+      margin: 4px;
+    }
 
     &:hover {
       opacity: 0.7;
