Switched to reducers with contexts

--- a/src/components/Popup/Popup.scss
+++ b/src/components/Popup/Popup.scss
@@ -1,7 +1,7 @@
 @import "../../assets/styles/utils/variables";
 @import "../../assets/styles/utils/mixins";
 
-.notifications {
+.popup {
   display: none;
   flex-direction: column;
   width: 380px;
