--- a/src/assets/styles/base/fonts.scss
+++ b/src/assets/styles/base/fonts.scss
@@ -1,70 +1,71 @@
 @font-face {
-    font-family: 'icomoon';
-    src:  url('../../fonts/icomoon.eot?u2tq30');
-    src:  url('../../fonts/icomoon.eot?u2tq30#iefix') format('embedded-opentype'),
-      url('../../fonts/icomoon.ttf?u2tq30') format('truetype'),
-      url('../../fonts/icomoon.woff?u2tq30') format('woff'),
-      url('../../fonts/icomoon.svg?u2tq30#icomoon') format('svg');
-    font-weight: normal;
-    font-style: normal;
-    font-display: block;
-  }
-  
-  [class^="icon-"], [class*=" icon-"] {
-    /* use !important to prevent issues with browser extensions that change fonts */
-    font-family: 'icomoon' !important;
-    speak: never;
-    font-style: normal;
-    font-weight: normal;
-    font-variant: normal;
-    text-transform: none;
-    line-height: 1;
-  
-    /* Better Font Rendering =========== */
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
-  
-  .icon-arrow-down:before {
-    content: "\e900";
-  }
-  .icon-arrow-right:before {
-    content: "\e901";
-  }
-  .icon-bell:before {
-    content: "\e902";
-  }
-  .icon-chevron-left:before {
-    content: "\e903";
-  }
-  .icon-chevron-right:before {
-    content: "\e904";
-  }
-  .icon-facebook:before {
-    content: "\e905";
-  }
-  .icon-info:before {
-    content: "\e906";
-  }
-  .icon-instagram:before {
-    content: "\e907";
-  }
-  .icon-play:before {
-    content: "\e908";
-  }
-  .icon-search:before {
-    content: "\e909";
-  }
-  .icon-thumbs-down:before {
-    content: "\e90a";
-  }
-  .icon-thumbs-up:before {
-    content: "\e90b";
-  }
-  .icon-twitter:before {
-    content: "\e90c";
-  }
-  .icon-user:before {
-    content: "\e90d";
-  }
-  
+  font-family: "icomoon";
+  src: url("../../fonts/icomoon.eot?40yz4e");
+  src: url("../../fonts/icomoon.eot?40yz4e#iefix") format("embedded-opentype"), url("../../fonts/icomoon.ttf?40yz4e") format("truetype"),
+    url("../../fonts/icomoon.woff?40yz4e") format("woff"), url("../../fonts/icomoon.svg?40yz4e#icomoon") format("svg");
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
+
+[class^="icon-"],
+[class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: "icomoon" !important;
+  speak: never;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-heart:before {
+  content: "\e90e";
+}
+.icon-arrow-down:before {
+  content: "\e900";
+}
+.icon-arrow-right:before {
+  content: "\e901";
+}
+.icon-bell:before {
+  content: "\e902";
+}
+.icon-chevron-left:before {
+  content: "\e903";
+}
+.icon-chevron-right:before {
+  content: "\e904";
+}
+.icon-facebook:before {
+  content: "\e905";
+}
+.icon-info:before {
+  content: "\e906";
+}
+.icon-instagram:before {
+  content: "\e907";
+}
+.icon-play:before {
+  content: "\e908";
+}
+.icon-search:before {
+  content: "\e909";
+}
+.icon-thumbs-down:before {
+  content: "\e90a";
+}
+.icon-thumbs-up:before {
+  content: "\e90b";
+}
+.icon-twitter:before {
+  content: "\e90c";
+}
+.icon-user:before {
+  content: "\e90d";
+}
