--- a/src/components/Actions/Actions.scss
+++ b/src/components/Actions/Actions.scss
@@ -34,5 +34,6 @@
     background-color: $color-accent;
     color: $color-text-primary;
     font-size: $font-tiny;
+    pointer-events: none;
   }
 }
