--- a/src/components/Popup/Popup.scss
+++ b/src/components/Popup/Popup.scss
@@ -48,6 +48,7 @@
 
   &__media {
     height: 92px;
+    min-width: 92px;
     width: 92px;
     border-radius: 6px;
     overflow: hidden;
@@ -68,6 +69,9 @@
 
   &__desc {
     color: $color-text-secondary;
+    height: calc((1rem * 2) * 1.4);
+    text-overflow: ellipsis;
+    overflow: hidden;
   }
 
   &__empty {
