--- a/src/index.scss
+++ b/src/index.scss
@@ -35,6 +35,17 @@ h2 {
   line-height: 1.1;
 }
 
+h3 {
+  font-size: $font-large;
+  font-weight: 700;
+  margin: 0;
+  line-height: 1.4;
+
+  @include breakpoint-down(sm) {
+    font-size: $font-xlarge;
+  }
+}
+
 h5 {
   font-size: $font-xlarge;
   font-weight: 600;
@@ -58,32 +69,3 @@ p {
   line-height: 1.5;
   color: $color-text-secondary;
 }
-// Proxima Nova Bold
-
-// font-family: proxima-nova, sans-serif;
-// font-weight: 700;
-// font-style: normal;
-
-// Proxima Nova Semibold
-
-// font-family: proxima-nova, sans-serif;
-// font-weight: 600;
-// font-style: normal;
-
-// Proxima Nova Regular
-
-// font-family: proxima-nova, sans-serif;
-// font-weight: 400;
-// font-style: normal;
-
-// Proxima Nova Light
-
-// font-family: proxima-nova, sans-serif;
-// font-weight: 300;
-// font-style: normal;
-
-// Proxima Nova Medium
-
-// font-family: proxima-nova, sans-serif;
-// font-weight: 500;
-// font-style: normal;
