--- a/src/components/Popup/Popup.scss
+++ b/src/components/Popup/Popup.scss
@@ -5,7 +5,6 @@
   display: none;
   flex-direction: column;
   width: 380px;
-  max-height: 700px;
   border-radius: 10px;
   background-color: $color-bg-secondary;
   box-shadow: 0 12px 56px rgba(0, 0, 0, 0.4);
@@ -36,6 +35,7 @@
     padding: 16px 0;
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
     transition: opacity 0.12s ease-in-out;
+    cursor: pointer;
 
     &:hover {
       opacity: 0.7;
