--- a/src/components/Featured/Featured.scss
+++ b/src/components/Featured/Featured.scss
@@ -96,6 +96,13 @@
     transition: opacity 0.12s ease-in-out;
     cursor: pointer;
 
+    @include breakpoint-down(sm) {
+      height: 100px;
+      top: 160px;
+      width: 48px;
+      opacity: 1;
+    }
+
     &:hover {
       opacity: 0.7;
     }
@@ -104,5 +111,10 @@
       left: initial;
       right: calc(64px - 32px);
     }
+  }
+
+  .thumbnail {
+    min-width: 360px;
+    width: 360px;
   }
 }
