--- a/src/components/Popup/Popup.scss
+++ b/src/components/Popup/Popup.scss
@@ -14,6 +14,10 @@
   right: -40px;
   cursor: default;
 
+  @include breakpoint-down(sm) {
+    width: 80vw;
+  }
+
   &:before {
     content: "";
     position: absolute;
